# PyNFSe

./: .codeclimate.yml  .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  CLI.md  HOW_TO.md  LICENCE  README.md  pynfse.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rest.py  setup.cfg  setup.py
PyNFSe/: __init__.py  pynfse.py
PyNFSe/_entidades/: servico.py
PyNFSe/_utils/: assinatura.py  certificado.py  transports.py
PyNFSe/base/: certificado.py  certificate.py  cliente_comunicacao.py  models.py  nfse_signer.py  pydantic_models.py  soap_client.py
PyNFSe/cli/: cadastro.py  cli.py  cli_commands.py  cli_validator.py  constants.py  file_manipulation.py  helpers.py
PyNFSe/cli/cadastro/: __init__.py  ambiente.py  configuracao.py  lote_rps.py  prestador.py  servico.py  tomador.py
PyNFSe/entidades/: __init__.py  lote_rps.py  pedido_cancelamento.py  pedido_cancelamento_nfse.py  prestador.py  rps.py  servico.py  tomador.py
PyNFSe/nfse/Curitiba/: __init__.py  _dsig.py  comunicacao.py  schema.py  serializacao.py
PyNFSe/nfse/pr/: __init__.py
PyNFSe/nfse/pr/curitiba/: __init__.py  _comunicacao.py  _dsig.py  _facade.py  _schema.py  comunicacao.py  serializacao.py  servicos.py
PyNFSe/tests/Curitiba/: basetestesserializacao.py  test_Curitiba_serializacao.py  test_Curitiba_serializacao_comunicacao.py  test_Curitiba_serializacao_entidades.py
PyNFSe/tests/Curitiba/xml_expected/: ConsultarNfseEnvio-por_nota.xml  ConsultarNfseRpsEnvio.xml  EnviarLoteRpsEnvio.xml  rps.xml  servico.xml  tomador.xml
PyNFSe/tests/pr/curitiba/: basetestesserializacao.py  test_curitiba_assinatura.py  test_curitiba_comunicacao.py  test_curitiba_serializacao_comunicacao.py  (+1 more)
PyNFSe/utils/: __init__.py  assinatura.py  certificado.py  cliente_comunicacao.py  models.py  transports.py  viacep.py
PyNFSe/utils/entidades/: __init__.py  base.py  configuracao.py  lote_rps.py  prestador.py  rps.py  servico.py  tomador.py
PyNFSe/utils/models/: base.py  lote_rps.py  prestador.py  rps.py  servico.py  tomador.py
nfse/modelos/: Emissor.py
pynfse/base/: certificate.py  models.py  nfse_signer.py
tests/base/: conftest.py  factories.py  test_certificate.py  test_models.py  test_nfse_signer.py  test_pydantic_models.py
tests/base/fixtures/: EnviarLoteRpsEnvio-Signed.xml  certificate.pfx
tests/pr/curitiba/: basetestesserializacao.py  test_curitiba_assinatura.py  test_curitiba_serializacao_comunicacao.py  test_curitiba_serializacao_entidades.py
(+17 files in other folders)
