[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parenthesis = true
known_localfolder = "PyNFSe,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
skip = "docs,_dsig.py,_schema.py"

[tool.poetry]
name = "pynfse"
version = "0.1.0"
description = "Lib para emissão de NFSe"
authors = ["Marcelo Belli <marcelo@belli.me>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
PyXB = "1.2.5"
zeep = "^3.4"
signxml = "^2.6"
lxml = "^4.4"
pysimplemodel = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
factory-boy = "^2.12"
isort = "^4.3"
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
