[tool.black]
line-length = 110
target-version = ["py37"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parenthesis = true
known_localfolder = "PyNFSe,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
skip = "docs,_dsig.py,_schema.py"

[tool.poetry]
name = "pynfse"
version = "0.2.0"
description = "Lib para emissão de NFSe"
authors = ["Marcelo Belli <marcelo@belli.me>"]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://github.com/marcelobelli/PyNFSe"
repository = "https://github.com/marcelobelli/PyNFSe"
keywords = ["nfe", "nfse", "nota_fiscal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "4.6.5"
pydantic = "1.0"
PyXB = "1.2.5"
signxml = "2.6.0"
zeep = "3.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allow-prereleases = true}
factory-boy = "^2.12"
ipython = "^7.8"
isort = "^4.3"
pre-commit = "^1.18"
pytest = "^5.2"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
